--- a/index.html
+++ b/index.html
@@ -30,20 +30,115 @@
                                                     <table align="center" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;border-spacing: 0;border: 0; margin:0; padding:0; min-width:800px;">
                                                         <tbody>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:800px; height:1283px;">
-                                                                    <img border="0" height="1283" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_01.jpg" style="line-height:0; border:0; width:800px; max-width:800px; min-width:800px; height:1283px; max-height:1283px; min-height:1283px;" width="800">
+                                                                <td align="left" valign="middle" style="width:1024px; height:631px;">
+                                                                    <img border="0" height="631" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_01.png" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:631px; max-height:631px; min-height:631px;" width="1024">
                                                                 </td>
                                                             </tr>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:800px; height:1480px;">
-                                                                    <img border="0" height="1480" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_02.jpg" style="line-height:0; border:0; width:800px; max-width:800px; min-width:800px; height:1480px; max-height:1480px; min-height:1480px;" width="800">
+                                                                <td align="left" valign="middle" style="width:1024px; height:833px;">
+                                                                    <img border="0" height="833" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_02.png" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:833px; max-height:833px; min-height:833px;" width="1024">
                                                                 </td>
                                                             </tr>
                                                             <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
-                                                                <td align="left" valign="middle" style="width:800px; height:456px;">
-                                                                    <img border="0" height="456" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_03.jpg" style="line-height:0; border:0; width:800px; max-width:800px; min-width:800px; height:456px; max-height:456px; min-height:456px;" width="800">
+                                                                <td align="left" valign="middle" style="width:1024px; height:186px;">
+                                                                    <table align="center" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;border-spacing: 0;border: 0; margin:0; padding:0; min-width:800px;">
+                                                                        <tbody>
+                                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                                <td align="left" valign="middle" style="width:50px; height:186px;">
+                                                                                </td>
+                                                                                <td align="left" valign="middle" style="width:950px; height:186px;">
+                                                                                    <p style="margin: 0 0 0.1in 0;  color: #243f6a; font-size: 22px; line-height: 1.2; font-family: 'Arial';">
+                                                                                        As part of our efforts, we engaged with the media and published an educational feature story on
+                                                                                        <a href="https://gulfnews.com/uae/why-holistic-management-of-diabetes-is-paramount-1.1668347047326" target="_blank" style="text-decoration: none; color: #9FC9EB;">Gulf News</a>, emphasizing the importance of a holistic approach to manage T2D effectively. The
+                                                                                        article attracted over 75,400 readers who spent an average of 3:23 minutes on the page.
+                                                                                    </p>
+                                                                                    <p style="margin: 0 0 0.1in 0;  color: #243f6a; font-size: 22px; line-height: 1.2; font-family: 'Arial';">
+                                                                                        We also produced and posted on BI’s LinkedIn page a creative <a href="https://www.linkedin.com/posts/boehringer-ingelheim_worlddiabetesday-yourdiabetescanbehidingsecrets-ugcPost-6998948425396289537-hJ4G" target="_blank" style="text-decoration: none; color: #9FC9EB;">video</a> in which some of our IMETA
+                                                                                        colleagues revealed key pieces of information or ‘secrets’ that T2D can be hiding.
+                                                                                    </p>
+                                                                                </td>
+                                                                                <td align="left" valign="middle" style="width:24px; height:186px;">
+                                                                                </td>
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
                                                                 </td>
-                                                            </tr>                                                            
+                                                            </tr>
+                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                <td align="left" valign="middle" style="width:1024px; height:87px;">
+                                                                    <img border="0" height="87" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_04.png" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:87px; max-height:87px; min-height:87px;" width="800">
+                                                                </td>
+                                                            </tr>
+                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                <td align="left" valign="middle" style="width:1024px; height:216px;">
+                                                                    <table align="center" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;border-spacing: 0;border: 0; margin:0; padding:0; min-width:800px;">
+                                                                        <tbody>
+                                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                                <td align="left" valign="middle" style="width:50px; height:216px;">
+                                                                                </td>
+                                                                                <td align="left" valign="middle" style="width:950px; height:216px;">
+                                                                                    <p style="margin: 0 0 0 0;  color: #243f6a; font-size: 22px; line-height: 1.2; font-family: 'Arial';">
+                                                                                        For our regional Instagram and Facebook channels, we produced four awareness videos as part of
+                                                                                        our #YourDiabetesCanBeHiding series that garnered millions of impressions. You can watch them
+                                                                                        by clicking on the links below:
+                                                                                    </p>
+                                                                                    <ul style="margin: 0 0 0.1in 0; padding: 0 0 0 0.2in;  color: #243f6a; font-size: 22px; line-height: 1.2; font-family: 'Arial';">
+                                                                                        <li>Video 1: <a href="https://www.instagram.com/reel/Ck7n5JPDXma/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration: none; color: #9FC9EB;">What is type 2 diabetes and interconnectivity</a></li>
+                                                                                        <li>Video 2: <a href="https://www.instagram.com/reel/ClOER_kDTdI/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration: none; color: #9FC9EB;">Type 2 diabetes and the heart</a></li>
+                                                                                        <li>Video 3: <a href="https://www.instagram.com/reel/Clid4UAjGbV/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration: none; color: #9FC9EB;">Type 2 diabetes and kidneys</a></li>
+                                                                                        <li>Video 4: <a href="https://www.instagram.com/reel/ClnSqCMD4zS/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration: none; color: #9FC9EB;">Management of type 2 diabetes</a></li>
+                                                                                    </ul>
+                                                                                </td>
+                                                                                <td align="left" valign="middle" style="width:24px; height:216px;">
+                                                                                </td>
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                <td align="left" valign="middle" style="width:1024px; height:324px;">
+                                                                    <img border="0" height="324" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_06.png" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:324px; max-height:324px; min-height:324px;" width="800">
+                                                                </td>
+                                                            </tr>
+                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                <td align="left" valign="middle" style="width:1024px; height:1475px;">
+                                                                    <img border="0" height="1475" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_07.png" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:1475px; max-height:1475px; min-height:1475px;" width="800">
+                                                                </td>
+                                                            </tr>
+                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                <td align="left" valign="middle" style="width:1024px; height:220px;">
+                                                                    <table align="center" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;border-spacing: 0;border: 0; margin:0; padding:0; min-width:800px;">
+                                                                        <tbody>
+                                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                                <td align="left" valign="middle" style="width:50px; height:220px;">
+                                                                                </td>
+                                                                                <td align="left" valign="middle" style="width:950px; height:220px;">
+                                                                                    <p style="margin: 0 0 0.2in 0;  color: #243f6a; font-size: 22px; line-height: 1.2; font-family: 'Arial';">
+                                                                                        We strongly encourage you to keep the ball rolling and prioritize your overall health every day by
+                                                                                        following the tips on the leaflets shared with you on WDD. <br>
+                                                                                        Best of luck! <br>
+                                                                                        Kind Regards, <br>
+                                                                                        IMETA Corporate Affairs on behalf of CRM360 Team
+                                                                                    </p>
+                                                                                    <p style="margin: 0 0 0.1in 0;  color: #243f6a; font-size: 14px; line-height: 1.2; font-family: 'Arial';">
+                                                                                        1. <a href="https://www.idf.org/our-network/regions-members/middle-east-and-north-africa/diabetes-in-mena.html" target="_blank" style="color: #243f6a;">Diabetes in MENA (idf.org)</a> <br>
+                                                                                        2. <a href="https://www.heart.org/en/health-topics/diabetes/diabetes-complications-and-risks/cardiovascular-disease--diabetes" target="_blank" style="color: #243f6a;">Cardiovascular Disease and Diabetes | American Heart Association</a>
+                                                                                    </p>
+                                                                                </td>
+                                                                                <td align="left" valign="middle" style="width:24px; height:220px;">
+                                                                                </td>
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                            <tr align="left" style="border-collapse: collapse;border-spacing: 0;border: 0; background-color:#fff;">
+                                                                <td align="left" valign="middle" style="width:1024px; height:146px;">
+                                                                    <img border="0" height="146" src="https://klontiaonline.github.io/emailer-7-interactive/images/1_09.png" style="line-height:0; border:0; width:1024px; max-width:1024px; min-width:1024px; height:146px; max-height:146px; min-height:146px;" width="800">
+                                                                </td>
+                                                            </tr>
+
                                                         </tbody>
                                                     </table>
                                                 </td>
